VA-1141 Fix line wrapping in task description

--- a/guess-the-answer.css
+++ b/guess-the-answer.css
@@ -19,7 +19,6 @@
 }
 
 .h5p-guess-answer-title p {
-  display: inline-flex;
   font-size: var(--h5p-theme-font-size-xl);
   color: var(--h5p-theme-text-primary);
   font-weight: 600;
